  - Add blob permalink link (Ciro Santilli)
  - Create annotated tags through UI and API (Sean Edge)
  - Snippets search (Charles Bushong)
  - Comment new push to existing MR
  - Add 'ci' to the blacklist of forbidden names
  - Improve text filtering on issues page
  - Comment & Close button
  - Process git push --all much faster
  - Don't allow edit of system notes

v 7.2.1
  - Delete orphaned labels during label migration (James Brooks)
  - Security: prevent XSS with stricter MIME types for raw repo files

v 7.2.0
  - Explore page
  - Add project stars (Ciro Santilli)
  - Log Sidekiq arguments
  - Better labels: colors, ability to rename and remove
  - Improve the way merge request collects diffs
  - Improve compare page for large diffs
  - Expose the full commit message via API
  - Fix 500 error on repository rename
  - Fix bug when MR download patch return invalid diff
  - Test gitlab-shell integration
  - Repository import timeout increased from 2 to 4 minutes allowing larger repos to be imported
  - API for labels (Robert Schilling)
  - API: ability to set an import url when creating project for specific user

v 7.1.1
  - Fix cpu usage issue in Firefox
  - Fix redirect loop when changing password by new user
  - Fix 500 error on new merge request page

v 7.1.0
  - Remove observers
  - Improve MR discussions
  - Filter by description on Issues#index page
  - Fix bug with namespace select when create new project page
  - Show README link after description for non-master members
  - Add @all mention for comments
  - Dont show reply button if user is not signed in
  - Expose more information for issues with webhook
  - Add a mention of the merge request into the default merge request commit message
  - Improve code highlight, introduce support for more languages like Go, Clojure, Erlang etc
  - Fix concurrency issue in repository download
  - Dont allow repository name start with ?
  - Improve email threading (Pierre de La Morinerie)
  - Cleaner help page